--- a/css/style.css
+++ b/css/style.css
@@ -34,44 +34,27 @@ body {
     outline: 0;
 }
 
-.other {
-    background-position: 0% 100%;
-    background-size: 350%;
-}
-
 .btn--purple {
     color: #8e44ad;
     border-color: #8e44ad;
-    background-image: -webkit-linear-gradient(90deg, #8e44ad 50%, transparent 50%); /* Safari 5.1 - 6.0 */
-    background-image: -o-linear-gradient(90deg, #8e44ad 50%, transparent 50%); /* Opera 11.1 - 12.0 */
-    background-image: -moz-linear-gradient(90deg, #8e44ad 50%, transparent 50%); /* Firefox 3.6 do 15 */
-    background-image: linear-gradient(90deg, #8e44ad 50%, transparent 50%); /* standard syntax */
+    background-image: linear-gradient(90deg, #8e44ad 50%, transparent 50%); 
 }
 
 .btn--yellow {
     color: #f1c40f;
     border-color: #f1c40f;
-    background-image: -webkit-linear-gradient(45deg, #f1c40f 50%, transparent 50%);
-    background-image: -o-linear-gradient(45deg, #f1c40f 50%, transparent 50%);
-    background-image: -moz-linear-gradient(45deg, #f1c40f 50%, transparent 50%);
     background-image: linear-gradient(45deg, #f1c40f 50%, transparent 50%);
 }
 
 .btn--blue {
     color: #3498db;
     border-color: #3498db;
-    background-image: -webkit-linear-gradient(135deg, #3498db 50%, transparent 50%);
-    background-image: -o-linear-gradient(135deg, #3498db 50%, transparent 50%);
-    background-image: -moz-linear-gradient(135deg, #3498db 50%, transparent 50%);
     background-image: linear-gradient(135deg, #3498db 50%, transparent 50%);
 }
 
 .btn--red {
     color: #de182f;
     border-color: #de182f;
-    background-image: -webkit-linear-gradient(0deg, #de182f 50%, transparent 50%);
-    background-image: -o-linear-gradient(0deg, #de182f 50%, transparent 50%);
-    background-image: -moz-linear-gradient(0deg, #de182f 50%, transparent 50%);
     background-image: linear-gradient(0deg, #de182f 50%, transparent 50%);
 }
 
@@ -80,9 +63,6 @@ body {
     border-color: #969696;
     background-position: 0% 100%;
     background-size: 350%;
-    background-image: -webkit-linear-gradient(225deg, #969696 50%, transparent 50%);
-    background-image: -o-linear-gradient(225deg, #969696 50%, transparent 50%);
-    background-image: -moz-linear-gradient(225deg, #969696 50%, transparent 50%);
     background-image: linear-gradient(225deg, #969696 50%, transparent 50%);
 }
 
@@ -97,31 +77,21 @@ body {
 }
 
 .btn--purple:active {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(155,73,191,1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(155,73,191,1);
     box-shadow: 0px 0px 10px 1px rgba(155,73,191,1);
 }
 
 .btn--yellow:active {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(189,153,10,1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(189,153,10,1);
     box-shadow: 0px 0px 10px 1px rgba(189,153,10,1);
 }
 
 .btn--blue:active {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(55,160,230,1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(55,160,230,1);
     box-shadow: 0px 0px 10px 1px rgba(55,160,230,1);
 }
 
 .btn--red:active {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(222,60,79,1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(222,60,79,1);
     box-shadow: 0px 0px 10px 1px rgba(222,60,79,1);
 }
 
 .btn--grey:active {
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(173,173,173,1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(173,173,173,1);
     box-shadow: 0px 0px 10px 1px rgba(173,173,173,1);
 }
